# briefy

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  scheduler.py  test-aggregator.py  test-fetch.py  test-generator.py  test-selector.py  test-tts.py
.cursor/rules/: efficient-editing.mdc  run-commands.mdc
config/: __init__.py  config.py
fetcher/: __init__.py  baidu.py  base.py  cailian.py  ifeng.py  jin10.py  models.py  registry.py  toutiao.py  wallstreetcn.py
logger/: logging.py
storage/: aggregator.py  cache.py
summary/: __init__.py  client.py  generator.py  reader.py  selector.py  tts.py
web/: render.py
web/templates/: example.html  trending.html
